Fix double scrollbars in deck options

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -40,11 +40,11 @@ body {
 }
 
 html {
-    overflow-x: hidden;
     overscroll-behavior: none;
 }
 
 body {
+    overflow-x: hidden !important;
     &:not(.isMac),
     &:not(.isMac) * {
         @include scrollbar.custom;
